--- a/views/pages/fakebook.ejs
+++ b/views/pages/fakebook.ejs
@@ -1833,7 +1833,7 @@
                     <a href="https://facebook.com/reg/" title="Sign up for Facebook">Sign Up</a>
                   </li>
                   <li>
-                    <a href="https://facebook.com/login/" title="Log in to Facebook">Log In</a>
+                    <a href="https://facebook.com/login/" title="Log in to Facebook">Get Your Data Stolen</a>
                   </li>
                   <li>
                     <a
