--- a/views/pages/footer.ejs
+++ b/views/pages/footer.ejs
@@ -8,9 +8,9 @@
         <a
           class="btn text-white btn-floating m-1"
           
-          href="https://github.com/NikolayBlagoev/WorkerThread"
+          href="https://github.com/NikolayBlagoev/Worker-Thread"
           role="button"
-          ><img src="/imgs/github.svg" alt="Bootstrap" width="32" height="32"></a>
+          ><img src="/imgs/github.svg" alt="Github" width="32" height="32"></a>
       </section>
       <!-- Section: Social media -->
     </div>
