--- a/views/pages/aboutus.ejs
+++ b/views/pages/aboutus.ejs
@@ -12,6 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
   <link href="/styles/explanatory.css" rel="stylesheet">
+  <link href="/styles/navbar.css" rel="stylesheet">
 </head>
 
 <body>
@@ -22,32 +23,181 @@
 	<div class="row">
 		<div class="row mt-md-5 mt-xs-5">
 			<div class="col-xs-1 col-md-3"></div>
-						<div class="col-xs-10 col-md-6 rounded ">
+			<div class="col-xs-10 col-md-6 rounded ">
 		
-							<div class="d-flex flex-start bg-white p-3 rounded">
-								<div style="margin-top: 40px;"></div>
-								<img class="rounded-circle shadow-1-strong me-3"
-								src="https://plainbackground.com/plain1024/a4a6a3.png" alt="avatar" width="130"
-								height="130" />
-								<div class="flex-grow-1 flex-shrink-1">
-								<div>
-									<div class="d-flex justify-content-between align-items-center">
-									<h3 class="mb-1 mt-2">
-										Nikolay Blagoev
-									</h3>
+				<div class="d-flex flex-start bg-white p-3 rounded">
+					<div style="margin-top: 40px;"></div>
+					<img class="rounded-circle shadow-1-strong me-3"
+						src="https://plainbackground.com/plain1024/a4a6a3.png" alt="avatar" width="130"
+						height="130" />
+					<div class="flex-grow-1 flex-shrink-1">
+						<div>
+							<div class="d-flex justify-content-between align-items-center">
+								<h3 class="mb-1 mt-2">
+									Nikolay Blagoev
+								</h3>
 									
-									</div>
-									<p class="mb-0 mt-3">
-									Editor, Illustrator, and Developer for The Worker Thread. Bachelor in Computer Science and Engineering from TU Delft. Master in TUDelft. Interests primarily include Security, Privacy, Decentralised Systems, and AI.
-									</p>
-								</div>
-								<div style="margin-top: 40px;"></div>
-
-
-			  
 							</div>
-		  				</div>
-				</div>
+							<p class="mb-0 mt-3">
+								Editor, Illustrator, and Developer for The Worker Thread. Bachelor in Computer Science and Engineering from TU Delft. Currenty pursuing a masters in Computer Science at TU Delft. Interests primarily include Security, Privacy, Decentralised Systems, and AI.
+							</p>
+						</div>
+						<div style="margin-top: 40px;"></div>
+					</div>		
+		  		</div>
+
+				<div style="margin-top: 10vh"></div>
+				<div class="d-flex flex-start bg-white p-3 rounded">
+					<div style="margin-top: 40px;"></div>
+					
+					<div class="flex-grow-1 flex-shrink-1">
+						<div>
+							<div class="d-flex justify-content-between align-items-center">
+								<h1 class="mb-1 mt-2">
+									Changelog
+								</h1>
+									
+							</div>
+							<p class="mb-0 mt-3">
+								This website is made primarily with educational purpose. We aim to educate the reader about complex topics through simple explanations and interactive examples. 
+								The Worker Thread will remain with no ads and no hidden fees <i>FOREVER</i>! The core tenet around which this website is built is 
+								that information needs to not be gatekept through money or elitism. It should be freely available in an easy to understand manner. 
+							</p>
+							<div style="margin-top: 20px;"></div>
+							<h3 class="mb-1 mt-2">
+								27/09/2023
+							</h3>
+							<div style="margin-top: 20px;"></div>
+							<ul>
+								<li >An article on the theoretical limits of <a href="/article/superintelligent-ai">Superintelligent AI</a></li>
+							</ul>
+							<div style="margin-top: 20px;"></div>
+							<hr class="mt-2 mb-2"/>
+							<div style="margin-top: 20px;"></div>
+							<h3 class="mb-1 mt-2">
+								17/09/2023
+							</h3>
+							<div style="margin-top: 20px;"></div>
+							<ul>
+								<li >Added <a href="/tool/no-control">No Control</a> - a virtual controller for Windows</li>
+								<li>Fixed a broken reference to digital signatures in email spoofing</li>
+							</ul>
+							<div style="margin-top: 20px;"></div>
+							<hr class="mt-2 mb-2"/>
+							<div style="margin-top: 20px;"></div>
+							<h3 class="mb-1 mt-2">
+								12/09/2023
+							</h3>
+							<div style="margin-top: 20px;"></div>
+							<ul>
+								<li >Huge improvements for <a href="/hilberts-gallery">Hilbert's Gallery</a> </li>
+								<li>Optimised the <a href="/tool/connect-four">Connect Four</a>. AI now thinks almost twice as fast on average</li>
+								
+							</ul>
+							<div style="margin-top: 20px;"></div>
+							<hr class="mt-2 mb-2"/>
+							<div style="margin-top: 20px;"></div>
+							
+							<h3 class="mb-1 mt-2">
+								06/09/2023
+							</h3>
+							<div style="margin-top: 20px;"></div>
+							<ul>
+								<li >Major UI changes. Website feels a bit neater now</li>
+								
+							</ul>
+							<div style="margin-top: 20px;"></div>
+							<hr class="mt-2 mb-2"/>
+						
+							<h3 class="mb-1 mt-2">
+								01/09/2023
+							</h3>
+							<div style="margin-top: 20px;"></div>
+							<ul>
+								<li >Added an article on <a href="/article/digital-signatures">Digital Signatures</a></li>
+								
+							</ul>
+							<div style="margin-top: 20px;"></div>
+							<hr class="mt-2 mb-2"/>
+							<h3 class="mb-1 mt-2">
+								31/08/2023
+							</h3>
+							<div style="margin-top: 20px;"></div>
+							<ul>
+								<li >Added the <a href="/hilberts-gallery">Hilbert's Gallery</a></li>
+								<li >Added this very changelog</li>
+								<li >Minor UI improvements</li>
+								<li>Improved interactivity of <a href="/article/symmetric-key-cryptography">Symmetric-Key Cryptography</a> and <a href="/article/caesar-cipher">Caesar's Cipher</a></li>
+							</ul>
+
+							<div style="margin-top: 20px;"></div>
+							<hr class="mt-2 mb-2"/>
+							<h3 class="mb-1 mt-2">
+								28/08/2023
+							</h3>
+							<div style="margin-top: 20px;"></div>
+							<ul>
+								<li >UI changes</li>
+								<li>Fixed carousel on main page</li>
+							</ul>
+
+							<div style="margin-top: 20px;"></div>
+							<hr class="mt-2 mb-2"/>
+							<h3 class="mb-1 mt-2">
+								25/08/2023
+							</h3>
+							<div style="margin-top: 20px;"></div>
+							<ul>
+								<li >Added an article on <a href="/article/hash">Hashing</a></li>
+							</ul>
+
+							<div style="margin-top: 20px;"></div>
+							<hr class="mt-2 mb-2"/>
+							<h3 class="mb-1 mt-2">
+								23/08/2023
+							</h3>
+							<div style="margin-top: 20px;"></div>
+							<ul>
+								<li >Added an article on <a href="/article/email-spoofing">Email Spoofing</a></li>
+								<li >Created spoofing email functionality in the back-end</li>
+							</ul>
+
+							<div style="margin-top: 20px;"></div>
+							<hr class="mt-2 mb-2"/>
+							<h3 class="mb-1 mt-2">
+								16/08/2023
+							</h3>
+							<div style="margin-top: 20px;"></div>
+							<ul>
+								<li >Added an article on <a href="/article/phishing">Phishing</a></li>
+								<li >Added a phishing example of <a href="/demo/fakebook">Facebook</a></li>
+							</ul>
+
+							<div style="margin-top: 20px;"></div>
+							<hr class="mt-2 mb-2"/>
+							<h3 class="mb-1 mt-2">
+								15/08/2023
+							</h3>
+							<div style="margin-top: 20px;"></div>
+							<ul>
+								<li >Added an article on <a href="/article/chess-solvers">Chess Solvers</a></li>
+								<li >Added a <a href="/tool/connect-four">connect four game</a> with vs. AI options</li>
+							</ul>
+
+							<div style="margin-top: 20px;"></div>
+							<hr class="mt-2 mb-2"/>
+							<h3 class="mb-1 mt-2">
+								10/08/2023
+							</h3>
+							<div style="margin-top: 20px;"></div>
+							<ul>
+								<li >The Worker Thread was officially released</li>
+							</ul>
+						</div>
+						<div style="margin-top: 40px;"></div>
+					</div>		
+		  		</div>
+			</div>
 		</div>
 	</div>
 		
