--- a/views/pages/city-of-the-future.ejs
+++ b/views/pages/city-of-the-future.ejs
@@ -13,6 +13,7 @@
   
   
   <link href="/styles/city-of-the-future.css" rel="stylesheet">
+  <link href="/styles/navbar.css" rel="stylesheet">
 </head>
 
 <body>
