--- a/views/pages/essays.ejs
+++ b/views/pages/essays.ejs
@@ -14,12 +14,226 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
   <link href="/styles/essays.css" rel="stylesheet">
+  <link href="/styles/navbar.css" rel="stylesheet">
 </head>
 
 <body>
   <header>
     <%- include('header'); %>
   </header>
+
+  <main  class="bg-white">
+	<div class="row mt-md-5 mt-xs-5 g-0">
+<div class="col-xs-1 col-md-2"></div>
+			<div class="col-xs-10 col-md-8 rounded">
+		<div class="text-left">	
+		<h1 class = "ms-4">ESSAYS</h1>
+		<hr class="mt-2 mb-2"/>
+		</div>
+	
+
+
+<div style="margin-top: 40px;"></div>
+<h4 class = "ms-4">All Essays</h4>
+<div id="aiCarousel" class="carousel slide container" data-interval="false">
+<div class="carousel-inner">
+<div class="carousel-item ">
+	<div class="col-md-4 me-2">
+		<div class="card card-body h-100">
+	<a class="thumbnail h-100" href="/article/privacy">
+			  <img class="img-inner img-fluid" src="imgs/eye.jpg">
+			  <h5 class="card-title mt-2">Privacy in a Digital World</h5>
+	  <p class="card-text">A short essay on digital privacy in the modern world.</p>
+			</a>
+</div>
+	</div>
+
+</div>
+<div class="carousel-item">
+	<div class="col-md-4 me-2">
+		<div class="card card-body h-100">
+			 <a class="thumbnail h-100"  href="/article/privacy-through-obfuscation">
+			  <img class="img-inner img-fluid" src="imgs/obscurity.jpg">
+			  <h5 class="card-title mt-2">Privacy Through Obfuscation</h5>
+	  <p class="card-text">Short essay on the importance of keeping metadata hidden to assure privacy</p>
+			</a>
+		</div>
+	</div>
+</div>
+
+<div class="carousel-item">
+	<div class="col-md-4 me-2">
+		<div class="card card-body h-100">
+			 <a class="thumbnail h-100" href="/article/crypto-anarchist-manifesto">
+			  <img class="img-inner img-fluid"  src="imgs/cryptoanarch.jpg">
+			  <h5 class="card-title mt-2">Crypto Anarchist Manifesto</h5>
+				<p class="card-text">Originally written and published in 1988 by Timothy C. May, this manifesto served as the basis of much of the cypherpunks movement</p>
+			</a>
+		</div>
+	</div>
+</div>
+
+<div class="carousel-item">
+	<div class="col-md-4 me-2">
+		<div class="card card-body h-100">
+			 <a class="thumbnail h-100"  href="/article/superintelligent-ai">
+			  <img class="img-inner img-fluid" src="imgs/brain.jpg">
+			  <h5 class="card-title mt-2">Superintelligent AI</h5>
+	  		<p class="card-text">Some interesting works on the limit of the Artificial Intelligence - Superintelligence.</p>
+			</a>
+		</div>
+	</div>
+</div>
+
+
+
+</div>
+<button class="carousel-control-prev" type="button" onclick="prevIt()">
+<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+<span class="visually-hidden">Previous</span>
+</button>
+<button class="carousel-control-next" type="button" onclick="nextIt()">
+<span class="carousel-control-next-icon" aria-hidden="true"></span>
+<span class="visually-hidden">Next</span>
+</button>
+</div>
+
+
+
+
+
+<div style="margin-top: 10vh;"></div>
+
+<div class="row mt-5">
+	<div class="col-sm-1 col-md-2"></div>
+			<div class="col-sm-10 col-md-8 rounded">
+		<!-- <h1 class="ms-5">All Explanatory Articles</h1> -->
+		<hr class="mt-2 mb-2"/>
+		
+		<a class="thumbnail" href="/article/privacy">
+		<div class="card " >
+		  <div class="row g-0 d-flex">
+				<div class="col-xs-2 col-md-4 img-wrapper">
+				  <img src="imgs/eye.jpg" class="img-fluid rounded-start img-list" alt="..."  >
+				</div>
+				<div class="col-xs-10 col-md-8 text-left p-md-4">
+				  <div class="card-body text-left">
+					<h6 class="card-title text-left">Privacy in a Digital World</h6>
+					<p class="text-muted text-left">Privacy, Essay</p>
+					
+				  </div>
+			</div>
+		   </div>
+		</div>
+		</a>
+		<hr class="mt-2 mb-2"/>
+		<a class="thumbnail" href="/article/privacy-through-obfuscation">
+		<div class="card " >
+		  <div class="row g-0 d-flex">
+				<div class="col-xs-2 col-md-4 img-wrapper">
+				  <img src="imgs/obscurity.jpg" class="img-fluid rounded-start img-list" alt="..." >
+				</div>
+				<div class="col-xs-10 col-md-8 text-left p-md-4">
+				  <div class="card-body text-left">
+					<h6 class="card-title text-left">Privacy Through Obfuscation</h6>
+					<p class="text-muted text-left">Privacy,  Essay, Metadata</p>
+					
+				  </div>
+			</div>
+		   </div>
+		</div>
+		</a>
+		<hr class="mt-2 mb-2"/>
+		<a class="thumbnail" href="/article/crypto-anarchist-manifesto">
+		<div class="card " >
+		  <div class="row g-0 d-flex">
+				<div class="col-xs-2 col-md-4 img-wrapper">
+				  <img src="imgs/cryptoanarch.jpg" class="img-fluid rounded-start img-list" alt="..." >
+				</div>
+				<div class="col-xs-10 col-md-8 text-left p-md-4">
+				  <div class="card-body text-left">
+					<h6 class="card-title text-left">Crypto Anarchist Manifesto</h6>
+					<p class="text-muted text-left">Cypherpunks, Manifesto</p>
+					
+				  </div>
+			</div>
+		   </div>
+		</div>
+		</a>
+
+		<hr class="mt-2 mb-2"/>
+		<a class="thumbnail" href="/article/hilberts-gallery">
+		<div class="card " >
+		  <div class="row g-0 d-flex">
+				<div class="col-xs-2 col-md-4 img-wrapper">
+				  <img src="imgs/kiss.png" class="img-fluid rounded-start img-list" alt="..." >
+				</div>
+				<div class="col-xs-10 col-md-8 text-left p-md-4">
+				  <div class="card-body text-left">
+					<h6 class="card-title text-left">Hilbert's Gallery</h6>
+					<p class="text-muted text-left">AI, Art</p>
+					
+				  </div>
+			</div>
+		   </div>
+		</div>
+		</a>
+
+		<hr class="mt-2 mb-2"/>
+		<a class="thumbnail" href="/article/superintelligent-ai">
+		<div class="card " >
+		  <div class="row g-0 d-flex">
+				<div class="col-xs-2 col-md-4 img-wrapper">
+				  <img src="imgs/brain.jpg" class="img-fluid rounded-start img-list" alt="..." >
+				</div>
+				<div class="col-xs-10 col-md-8 text-left p-md-4">
+				  <div class="card-body text-left">
+					<h6 class="card-title text-left">Superintelligent AI</h6>
+					<p class="text-muted text-left">AI, Essay</p>
+					
+				  </div>
+			</div>
+		   </div>
+		</div>
+		</a>
+
+
+		<hr class="mt-2 mb-2"/>
+		<a class="thumbnail" href="/article/answering-dumb-questions">
+		<div class="card " >
+		  <div class="row g-0 d-flex">
+				<div class="col-xs-2 col-md-4 img-wrapper">
+				  <img src="imgs/questio.jpg" class="img-fluid rounded-start img-list" alt="..." >
+				</div>
+				<div class="col-xs-10 col-md-8 text-left p-md-4">
+				  <div class="card-body text-left">
+					<h6 class="card-title text-left">Answering Book's Questions</h6>
+					<p class="text-muted text-left">Distributed, Essay</p>
+					
+				  </div>
+			</div>
+		   </div>
+		</div>
+		</a>
+
+
+
+
+
+
+
+		</div>
+			<div class="col-sm-1 col-md-2"></div>
+</div>
+
+
+
+</div>
+<div class="col-xs-1 col-md-2"></div>
+
+</main>
+
+<!-- 
   <main  class="bg-white">
     		<div class="row mt-md-5 mt-xs-5">
 		<div class="col-xs-1 col-md-2"></div>
@@ -40,8 +254,8 @@
             <div class="col-md-4 me-2">
                 <div class="card card-body h-100">
 		    <a class="thumbnail" href="/article/privacy">
-                      <img class="img-fluid" src="imgs/eye.jpg">
-                      <h5 class="card-title">Privacy in a Digital World</h5>
+                      <img class="img-inner" src="imgs/eye.jpg">
+                      <h5 class="card-title mt-2">Privacy in a Digital World</h5>
 			  <p class="card-text">A short essay on digital privacy in the modern world.</p>
                     </a>
 		</div>
@@ -52,8 +266,8 @@
             <div class="col-md-4 me-2 h-100">
                 <div class="card card-body">
                      <a class="thumbnail" href="/article/privacy-through-obfuscation">
-                      <img class="img-fluid" src="imgs/obscurity.jpg">
-                      <h5 class="card-title">Privacy Through Obfuscation</h5>
+                      <img class="img-inner" src="imgs/obscurity.jpg">
+                      <h5 class="card-title mt-2">Privacy Through Obfuscation</h5>
 			  <p class="card-text">Short essay on the importance of keeping metadata hidden to assure privacy</p>
                     </a>
                 </div>
@@ -63,8 +277,8 @@
             <div class="col-md-4 me-2 h-100">
                 <div class="card card-body">
  		    <a class="thumbnail" href="/article/crypto-anarchist-manifesto">
-                      <img class="img-fluid" src="imgs/cryptoanarch.jpg">
-                      <h5 class="card-title">Crypto Anarchist Manifesto</h5>
+                      <img class="img-inner" src="imgs/cryptoanarch.jpg">
+                      <h5 class="card-title mt-2">Crypto Anarchist Manifesto</h5>
 			  <p class="card-text">Originally written and published in 1988 by Timothy C. May, this manifesto served as the basis of much of the cypherpunks movement.</p>
                     </a>
                 </div>
@@ -85,17 +299,18 @@
     </button>
 </div>
 
-<div style="margin-top: 100px;"></div>
+<div style="margin-top: 10vh;"></div>
 
-<div class="row mt-md-5 mt-xs-5">
+<div class="row mt-5">
 			<div class="col-xs-1 col-md-2"></div>
                 	<div class="col-xs-10 col-md-8 rounded">
+				<h1 class="ms-5">All Essays</h1>
 				<hr class="mt-2 mb-2"/>
 				<a class="thumbnail" href="/article/privacy">
 				<div class="card spc" >
   				<div class="row g-0 d-flex">
     					<div class="col-xs-2 col-md-4">
-      					<img src="imgs/eye.jpg" class="img-fluid rounded-start" alt="..." ">
+      					<img src="imgs/eye.jpg" class="img-fluid rounded-start" alt="...">
     					</div>
     					<div class="col-xs-10 col-md-8 text-left p-md-4">
       					<div class="card-body text-left">
@@ -112,12 +327,12 @@
 				<div class="card spc" >
   				<div class="row g-0 d-flex">
     					<div class="col-xs-2 col-md-4">
-      					<img src="imgs/obscurity.jpg" class="img-fluid rounded-start" alt="..."  ">
+      					<img src="imgs/obscurity.jpg" class="img-fluid rounded-start" alt="..." >
     					</div>
     					<div class="col-xs-10 col-md-8 text-left p-md-4">
       					<div class="card-body text-left">
         					<h6 class="card-title text-left">Privacy Through Obfuscation</h6>
-        					<p class="text-muted text-left">Privacy, Essay,Metadata</p>
+        					<p class="text-muted text-left">Privacy, Essay, Metadata</p>
         					
       					</div>
     				</div>
@@ -129,12 +344,31 @@
 				<div class="card spc" >
   				<div class="row g-0 d-flex">
     					<div class="col-xs-2 col-md-4">
-      					<img src="imgs/cryptoanarch.jpg" class="img-fluid rounded-start" alt="..."  ">
+      					<img src="imgs/cryptoanarch.jpg" class="img-fluid rounded-start" alt="...">
     					</div>
     					<div class="col-xs-10 col-md-8 text-left p-md-4">
       					<div class="card-body text-left">
         					<h6 class="card-title text-left">Crypto Anarchist Manifesto</h6>
-        					<p class="text-muted text-left">Cypherpunks,Manifesto</p>
+        					<p class="text-muted text-left">Cypherpunks, Manifesto</p>
+        					
+      					</div>
+    				</div>
+  			 	</div>
+				</div>
+				</a>
+
+
+				<hr class="mt-2 mb-2"/>
+				<a class="thumbnail" href="/article/hilberts-gallery">
+				<div class="card spc" >
+  				<div class="row g-0 d-flex">
+    					<div class="col-xs-2 col-md-4">
+      					<img src="imgs/kiss.png" class="img-fluid rounded-start" alt="...">
+    					</div>
+    					<div class="col-xs-10 col-md-8 text-left p-md-4">
+      					<div class="card-body text-left">
+        					<h6 class="card-title text-left">Hilbert's Gallery</h6>
+        					<p class="text-muted text-left">AI, Art</p>
         					
       					</div>
     				</div>
@@ -155,7 +389,7 @@
 		</div>
 		<div class="col-xs-1 col-md-2"></div>
 		
-  </main>
+  </main> -->
   <%- include('footer'); %>
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
