--- a/views/pages/explanatory.ejs
+++ b/views/pages/explanatory.ejs
@@ -14,6 +14,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
   <link href="/styles/explanatory.css" rel="stylesheet">
+  <link href="/styles/navbar.css" rel="stylesheet">
 </head>
 
 <body>
@@ -21,11 +22,11 @@
     <%- include('header'); %>
   </header>
   <main  class="bg-white">
-    		<div class="row mt-md-5 mt-xs-5">
+    		<div class="row mt-md-5 mt-xs-5 g-0">
 		<div class="col-xs-1 col-md-2"></div>
                 	<div class="col-xs-10 col-md-8 rounded">
 				<div class="text-left">	
-				<h1 class = "ms-4">Articles</h1>
+				<h1 class = "ms-4">EXPLANATORY ARTICLES</h1>
 				<hr class="mt-2 mb-2"/>
 				</div>
 			
@@ -34,38 +35,62 @@
 <div style="margin-top: 40px;"></div>
 <h4 class = "ms-4">Cryptography</h4>
 <div id="aiCarousel" class="carousel slide container" data-interval="false">
-    <div class="carousel-inner w-100 h-100">
-        <div class="carousel-item active h-100">
+    <div class="carousel-inner">
+        <div class="carousel-item ">
             <div class="col-md-4 me-2">
                 <div class="card card-body h-100">
-		    <a class="thumbnail" href="/article/introduction-to-cryptography">
-                      <img class="img-fluid" src="imgs/cryptography.jpg">
-                      <h5 class="card-title">Introduction to Cryptography</h5>
+		    <a class="thumbnail h-100" href="/article/introduction-to-cryptography">
+                      <img class="img-inner img-fluid" src="imgs/cryptography.jpg">
+                      <h5 class="card-title mt-2">Introduction to Cryptography</h5>
 			  <p class="card-text">An interactive introduction to the bare bones of cryptography</p>
                     </a>
 		</div>
             </div>
 		
         </div>
-        <div class="carousel-item h-100">
-            <div class="col-md-4 me-2 h-100">
+        <div class="carousel-item">
+            <div class="col-md-4 me-2">
                 <div class="card card-body h-100">
-                     <a class="thumbnail" href="/article/symmetric-key-cryptography">
-                      <img class="img-fluid" src="imgs/keys.jpg">
-                      <h5 class="card-title">Symmetric-Key Cryptography</h5>
+                     <a class="thumbnail h-100" href="/article/symmetric-key-cryptography">
+                      <img class="img-inner img-fluid" src="imgs/keys.jpg">
+                      <h5 class="card-title mt-2">Symmetric-Key Cryptography</h5>
 			  <p class="card-text">An interactive demonstration of the symmetric-key encryption techniques</p>
                     </a>
                 </div>
             </div>
         </div>
-
-        <div class="carousel-item h-100">
+		
+		<div class="carousel-item">
             <div class="col-md-4 me-2">
                 <div class="card card-body h-100">
-                     <a class="thumbnail" href="/article/caesar-cipher">
-                      <img class="img-fluid" src="imgs/caesar.jpg">
-                      <h5 class="card-title">Caesar Cipher</h5>
+                     <a class="thumbnail h-100" href="/article/digital-signatures">
+                      <img class="img-inner img-fluid" src="imgs/dssign0000.jpg">
+                      <h5 class="card-title mt-2">Digital Signatures</h5>
+			  		  <p class="card-text">A short interactive article on one of the most essential modern cryptographic concepts</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="carousel-item">
+            <div class="col-md-4 me-2">
+                <div class="card card-body  h-100">
+                     <a class="thumbnail h-100" href="/article/caesar-cipher">
+                      <img class="img-inner img-fluid" src="imgs/caesar.jpg">
+                      <h5 class="card-title mt-2">Caesar Cipher</h5>
 			  <p class="card-text">Study one of the oldest cipher with an interactive example</p>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+		<div class="carousel-item">
+            <div class="col-md-4 me-2">
+                <div class="card card-body h-100">
+                     <a class="thumbnail h-100" href="/article/hash">
+                      <img class="img-inner img-fluid" src="imgs/hash.jpg">
+                      <h5 class="card-title mt-2">Hashing</h5>
+			  <p class="card-text">Learn the basics of hashing functions with an interactive material</p>
                     </a>
                 </div>
             </div>
@@ -73,28 +98,33 @@
         
 
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#aiCarousel" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" onclick="prevIt()">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#aiCarousel" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" onclick="nextIt()">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
 </div>
 
-<div style="margin-top: 100px;"></div>
 
-<div class="row mt-md-5 mt-xs-5">
-			<div class="col-xs-1 col-md-2"></div>
-                	<div class="col-xs-10 col-md-8 rounded">
+
+
+
+<div style="margin-top: 10vh;"></div>
+
+<div class="row mt-5">
+			<div class="col-sm-1 col-md-2"></div>
+                	<div class="col-sm-10 col-md-8 rounded">
+				<h1 class="ms-5">All Explanatory Articles</h1>
 				<hr class="mt-2 mb-2"/>
 				
 				<a class="thumbnail" href="/article/introduction-to-cryptography">
 				<div class="card " >
   				<div class="row g-0 d-flex">
-    					<div class="col-xs-2 col-md-4">
-      					<img src="imgs/cryptography.jpg" class="img-fluid rounded-start" alt="..."  ">
+    					<div class="col-xs-2 col-md-4 img-wrapper">
+      					<img src="imgs/cryptography.jpg" class="img-fluid rounded-start img-list" alt="..."  >
     					</div>
     					<div class="col-xs-10 col-md-8 text-left p-md-4">
       					<div class="card-body text-left">
@@ -110,8 +140,8 @@
 				<a class="thumbnail" href="/article/chess-solvers">
 				<div class="card " >
   				<div class="row g-0 d-flex">
-    					<div class="col-xs-2 col-md-4">
-      					<img src="imgs/chess.jpg" class="img-fluid rounded-start" alt="..." style="max-height: 100%; ">
+    					<div class="col-xs-2 col-md-4 img-wrapper">
+      					<img src="imgs/chess.jpg" class="img-fluid rounded-start img-list" alt="..." >
     					</div>
     					<div class="col-xs-10 col-md-8 text-left p-md-4">
       					<div class="card-body text-left">
@@ -127,8 +157,8 @@
 				<a class="thumbnail" href="/article/symmetric-key-cryptography">
 				<div class="card " >
   				<div class="row g-0 d-flex">
-    					<div class="col-xs-2 col-md-4">
-      					<img src="imgs/keys.jpg" class="img-fluid rounded-start" alt="..." style="max-height: 100%; ">
+    					<div class="col-xs-2 col-md-4 img-wrapper">
+      					<img src="imgs/keys.jpg" class="img-fluid rounded-start img-list" alt="..." >
     					</div>
     					<div class="col-xs-10 col-md-8 text-left p-md-4">
       					<div class="card-body text-left">
@@ -142,11 +172,29 @@
 				</a>
 
 				<hr class="mt-2 mb-2"/>
+				<a class="thumbnail" href="/article/cookies">
+				<div class="card " >
+  				<div class="row g-0 d-flex">
+    					<div class="col-xs-2 col-md-4 img-wrapper">
+      					<img src="imgs/cookie.jpg" class="img-fluid rounded-start img-list" alt="..." >
+    					</div>
+    					<div class="col-xs-10 col-md-8 text-left p-md-4">
+      					<div class="card-body text-left">
+        					<h6 class="card-title text-left">All About Cookies</h6>
+        					<p class="text-muted text-left">Web, Explanatory</p>
+        					
+      					</div>
+    				</div>
+  			 	</div>
+				</div>
+				</a>
+
+				<hr class="mt-2 mb-2"/>
 				<a class="thumbnail" href="/article/caesar-cipher">
 				<div class="card " >
   				<div class="row g-0 d-flex">
-    					<div class="col-xs-2 col-md-4">
-      					<img src="imgs/caesar.jpg" class="img-fluid rounded-start" alt="..." style="max-height: 100%; ">
+    					<div class="col-xs-2 col-md-4 img-wrapper">
+      					<img src="imgs/caesar.jpg" class="img-fluid rounded-start img-list" alt="..." >
     					</div>
     					<div class="col-xs-10 col-md-8 text-left p-md-4">
       					<div class="card-body text-left">
@@ -164,8 +212,8 @@
 				<a class="thumbnail" href="/article/ai-introduction">
 				<div class="card " >
   				<div class="row g-0 d-flex">
-    					<div class="col-xs-2 col-md-4">
-      					<img src="imgs/R.jpg" class="img-fluid rounded-start" alt="..." style="max-height: 100%; ">
+    					<div class="col-xs-2 col-md-4 img-wrapper" >
+      					<img src="imgs/R.jpg" class="img-fluid rounded-start img-list" alt="..." >
     					</div>
     					<div class="col-xs-10 col-md-8 text-left p-md-4">
       					<div class="card-body text-left">
@@ -179,11 +227,30 @@
 				</a>
 
 				<hr class="mt-2 mb-2"/>
+				<a class="thumbnail" href="/article/digital-signatures">
+				<div class="card " >
+  				<div class="row g-0 d-flex">
+    					<div class="col-xs-2 col-md-4 img-wrapper" >
+      					<img src="imgs/dssign0000.jpg" class="img-fluid rounded-start img-list" alt="..." >
+    					</div>
+    					<div class="col-xs-10 col-md-8 text-left p-md-4">
+      					<div class="card-body text-left">
+        					<h6 class="card-title text-left">Digital Signatures</h6>
+        					<p class="text-muted text-left">Cryptography, Explanatory, Interactive</p>
+        					
+      					</div>
+    				</div>
+  			 	</div>
+				</div>
+				</a>
+
+
+				<hr class="mt-2 mb-2"/>
 				<a class="thumbnail" href="/article/phishing">
 				<div class="card " >
   				<div class="row g-0 d-flex">
-    					<div class="col-xs-2 col-md-4">
-      					<img src="imgs/phishing.png" class="img-fluid rounded-start" alt="..." style="max-height: 100%; ">
+    					<div class="col-xs-2 col-md-4 img-wrapper">
+      					<img src="imgs/phishing.png" class="img-fluid rounded-start img-list" alt="..." >
     					</div>
     					<div class="col-xs-10 col-md-8 text-left p-md-4">
       					<div class="card-body text-left">
@@ -200,8 +267,8 @@
 				<a class="thumbnail" href="/article/email-spoofing">
 				<div class="card " >
   				<div class="row g-0 d-flex">
-    					<div class="col-xs-2 col-md-4">
-      					<img src="imgs/spoof.png" class="img-fluid rounded-start" alt="..." style="max-height: 100%; ">
+    					<div class="col-xs-2 col-md-4 img-wrapper">
+      					<img src="imgs/spoof.png" class="img-fluid rounded-start img-list" alt="..." >
     					</div>
     					<div class="col-xs-10 col-md-8 text-left p-md-4">
       					<div class="card-body text-left">
@@ -214,11 +281,29 @@
 				</div>
 				</a>
 
+				<hr class="mt-2 mb-2"/>
+				<a class="thumbnail" href="/article/hash">
+				<div class="card " >
+  				<div class="row g-0 d-flex">
+    					<div class="col-xs-2 col-md-4 img-wrapper">
+      					<img src="imgs/hash.jpg" class="img-fluid rounded-start img-list" alt="..." >
+    					</div>
+    					<div class="col-xs-10 col-md-8 text-left p-md-4">
+      					<div class="card-body text-left">
+        					<h6 class="card-title text-left">Hashing</h6>
+        					<p class="text-muted text-left">Cryptography, Explanatory, Interactive</p>
+        					
+      					</div>
+    				</div>
+  			 	</div>
+				</div>
+				</a>
+
 
 
 
 		    	</div>
-                	<div class="col-xs-1 col-md-2"></div>
+                	<div class="col-sm-1 col-md-2"></div>
 		</div>
 
 
