--- a/views/pages/header.ejs
+++ b/views/pages/header.ejs
@@ -7,16 +7,19 @@
             </button>
             <div class="collapse navbar-collapse" id="n_bar">
                 <ul class="navbar-nav">
-                    
-                    <li class="nav-item"><a class="nav-link" href="/explanatory">Explanatory</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/news">News</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/essays">Essays</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/webart">Web Art</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/tools">Tools</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/guestbook">Guestbook</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/aboutus">About Us</a></li>
+
+    
+
+                    <li class="nav-item"><a id = "expl" class="nav-link" href="/explanatory">Explanatory</a></li>
+                    <li class="nav-item"><a id = "news" class="nav-link" href="/news">News</a></li>
+                    <li class="nav-item"><a id = "ess" class="nav-link" href="/essays">Essays</a></li>
+                    <li class="nav-item"><a id = "wart" class="nav-link" href="/webart">Web Art</a></li>
+                    <li class="nav-item"><a id = "tools" class="nav-link" href="/tools">Tools</a></li>
+                    <li class="nav-item"><a id = "gbook" class="nav-link" href="/guestbook">Guestbook</a></li>
+                    <li class="nav-item"><a id = "abus" class="nav-link" href="/aboutus">About Us</a></li>
                 </ul>
             </div>
         </div>
   </nav>
+  <script src="/js/navbar.js"></script>
   
