--- a/views/pages/main.ejs
+++ b/views/pages/main.ejs
@@ -13,6 +13,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
   <link href="/styles/main.css" rel="stylesheet">
+  <link href="/styles/navbar.css" rel="stylesheet">
 </head>
 
 <body>
@@ -55,25 +56,27 @@
   <div class="carousel-inner w-100 h-100">
 	<a class="thumbnail" href="/article/ai-introduction">
     <div class="carousel-item active">
-      <img src="imgs/R.jpg" class="d-block w-100 h-100" alt="...">
-      <div class="d-block">
-	<div class="card pb-md-4">
-  <div class="card-body h-100" >
-    <h5 class="text-center">Introduction to AI</h5>
-        <p>An explanatory piece on the very basics of Artificial Intelligence. The focus is more on the theory and concepts of the field of Artificial Intelligence, rather than the practical development of it. This article serves as an introduction to our series on AI. We have avoided too much technical jarogon, so thait it is suitable for everyone, regardless of prior experience. 
-	  </p>
-  </div>
-</div>
+      
+      <div class="d-block h-100">
+		<div class="card pb-md-4 h-100">
+			<img src="imgs/R.jpg" class="d-block w-100 img-inner" alt="...">
+  			<div class="card-body" >
+    			<h5 class="text-center">Introduction to AI</h5>
+        		<p>An explanatory piece on the very basics of Artificial Intelligence. The focus is more on the theory and concepts of the field of Artificial Intelligence, rather than the practical development of it. This article serves as an introduction to our series on AI. We have avoided too much technical jarogon, so thait it is suitable for everyone, regardless of prior experience. 
+	  			</p>
+  			</div>
+  		</div>
         
       </div>
     </div>
 	</a>
 	<a class="thumbnail" href="/article/chess-solvers">
     <div class="carousel-item ">
-      <img src="imgs/chess.jpg" class="d-block w-100 h-100" alt="...">
-      <div class="d-block">
-        	<div class="card pb-md-4">
-  <div class="card-body">
+      
+      <div class="d-block h-100">
+        	<div class="card pb-md-4 h-100">
+				<img src="imgs/chess.jpg" class="d-block w-100 img-inner" alt="..."/>
+  				<div class="card-body">
     <h5 class="text-center">Chess Solvers</h5>
         <p>Have you wondered how Stockfish and Alpha zero beat humans with ease? How do they work? This interactive article explains the innerworkings of chess (and other similar game) solvers. As a concrete example we provide fully functional Deep Learning and Heuristic-based Connect Four AIs. All code is available for this project.
 	  </p>
@@ -84,10 +87,11 @@
 	</a>
 <a class="thumbnail" href="/article/crypto-anarchist-manifesto">
     <div class="carousel-item">
-      <img src="imgs/cryptoanarch.jpg" class="d-block w-100 h-100" alt="...">
-      <div class=" d-block">
-        	<div class="card pb-md-4">
-  <div class="card-body h-100">
+      
+      <div class="d-block h-100">
+        	<div class="card pb-md-4 h-100">
+				<img src="imgs/cryptoanarch.jpg" class="d-block w-100 img-inner" alt="..."/>
+  				<div class="card-body">
     <h5 class="text-center">Crypto Anarchist Manifesto</h5>
         <p>Originally written and published in 1988 by Timothy C. May, this manifesto served as the basis of much of the cypherpunks movement. May argues that, similar to how the printing press altered essentially brought an end to the Medieval Period, the new digital cryptography tools will serve as a liberation from government interference and jurisdiction.
 	  </p>
@@ -120,7 +124,7 @@
 			<div class="card me-md-2 mt-md-4" style="max-width: 20rem; height: 7rem;">
   				<div class="row g-0">
     					<div class="col-md-4">
-      					<img src="imgs/R.jpg" class="img-fluid rounded-start" alt="...">
+      					<img src="imgs/R.jpg" class="img-fluid" alt="...">
     					</div>
     					<div class="col-md-8">
       					<div class="card-body fs-6">
@@ -137,7 +141,7 @@
 			<div class="card mb-3 me-md-2 mt-md-0" style="max-width: 20rem; height: 7rem;">
   				<div class="row g-0">
     					<div class="col-md-4">
-      					<img src="imgs/keys.jpg" class="img-fluid rounded-start" alt="...">
+      					<img src="imgs/keys.jpg" class="img-fluid" alt="...">
     					</div>
     					<div class="col-md-8">
       					<div class="card-body fs-6">
@@ -208,11 +212,12 @@
 		    </div>
 			
             </div>
-		
-		<div class="row mt-md-5 mt-xs-5">
+			<div style="margin-top: 5vh;"></div>
+		<div class="row mt-5">
 			<div class="col-xs-1 col-md-3"></div>
                 	<div class="col-xs-10 col-md-6 rounded">
-				
+				<h1 class="ms-5">All Articles</h1>
+				<hr class="mt-2 mb-2"/>
 				<a class="thumbnail" href="/article/privacy">
 				<div class="card " >
   				<div class="row g-0 d-flex">
@@ -334,6 +339,24 @@
 				</a>
 
 				<hr class="mt-2 mb-2"/>
+				<a class="thumbnail" href="/article/answering-dumb-questions">
+				<div class="card " >
+  				<div class="row g-0 d-flex">
+    					<div class="col-xs-2 col-md-4">
+      					<img src="imgs/questio.jpg" class="img-fluid rounded-start" alt="..." style="max-height: 100%; ">
+    					</div>
+    					<div class="col-xs-10 col-md-8 text-left p-md-4">
+      					<div class="card-body text-left">
+        					<h6 class="card-title text-left">Answering Book's Questions</h6>
+        					<p class="text-muted text-left">Distributed, Essay</p>
+        					
+      					</div>
+    				</div>
+  			 	</div>
+				</div>
+				</a>
+
+				<hr class="mt-2 mb-2"/>
 				<a class="thumbnail" href="/article/ai-introduction">
 				<div class="card " >
   				<div class="row g-0 d-flex">
@@ -344,6 +367,43 @@
       					<div class="card-body text-left">
         					<h6 class="card-title text-left">Introduction to AI</h6>
         					<p class="text-muted text-left">AI, Explanatory</p>
+        					
+      					</div>
+    				</div>
+  			 	</div>
+				</div>
+				</a>
+
+
+				<hr class="mt-2 mb-2"/>
+				<a class="thumbnail" href="/article/cookies">
+				<div class="card " >
+  				<div class="row g-0 d-flex">
+    					<div class="col-xs-2 col-md-4">
+      					<img src="imgs/cookie.jpg" class="img-fluid rounded-start" alt="..." style="max-height: 100%; ">
+    					</div>
+    					<div class="col-xs-10 col-md-8 text-left p-md-4">
+      					<div class="card-body text-left">
+        					<h6 class="card-title text-left">All About Cookies</h6>
+        					<p class="text-muted text-left">Web, Explanatory</p>
+        					
+      					</div>
+    				</div>
+  			 	</div>
+				</div>
+				</a>
+
+				<hr class="mt-2 mb-2"/>
+				<a class="thumbnail" href="/article/digital-signatures">
+				<div class="card " >
+  				<div class="row g-0 d-flex">
+    					<div class="col-xs-2 col-md-4">
+      					<img src="imgs/dssign0000.jpg" class="img-fluid rounded-start" alt="..." style="max-height: 100%; ">
+    					</div>
+    					<div class="col-xs-10 col-md-8 text-left p-md-4">
+      					<div class="card-body text-left">
+        					<h6 class="card-title text-left">Digital Signatures</h6>
+        					<p class="text-muted text-left">Cryptography, Explanatory, Interactive</p>
         					
       					</div>
     				</div>
