--- a/views/pages/tools.ejs
+++ b/views/pages/tools.ejs
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
-  <link href="/styles/main.css" rel="stylesheet">
+  <link href="/styles/tools.css" rel="stylesheet">
+  <link href="/styles/navbar.css" rel="stylesheet">
 </head>
 
 <body>
@@ -31,16 +32,16 @@
 			
 			
 
-<div class="row row-cols-12 row-cols-md-4 g-2">
+<div class="row row-cols-sm-10 row-cols-md-3 g-5">
   
-  <div class="col">
+  <div class="col mt-3">
     <a href="tool/connect-four">
     <div class="card h-100">
-      <img src="imgs/c4.jpg" class="card-img-top" alt="...">
+      <img src="imgs/c4.jpg" class="card-img-top img-inner ratio-16x9 w-100" alt="...">
       <div class="card-body user-select-none">
         <h5 class="card-title">Connect Four Solvers</h5>
         <p class="card-text">A deep-learning and heuristic-based solver for Connect-4</p>
-	  <div class="d-flex  text-right">
+	  <div class="d-flex  text-right position-absolute bottom-0 start-0 ms-4">
         <i class="bi bi-eye-fill"></i>
     <div id="view-shower-c4"><p class="text-black ms-3">0</p></div>
 	  
@@ -51,14 +52,34 @@
   </div>
    
 
-  <div class="col">
+
+  <div class="col mt-3">
+    <a href="tool/no-control">
+    <div class="card h-100">
+      <img src="imgs/nocontrol.png" class="card-img-top img-inner ratio-16x9 w-100" alt="...">
+      <div class="card-body user-select-none mb-5">
+        <h5 class="card-title">No Control</h5>
+        <p class="card-text">A virtual controller for windows</p>
+        <div style="margin-top: 2vh;"></div>
+	  <div class="d-flex  text-right position-absolute bottom-0 start-0 ms-4 mt-5">
+        <i class="bi bi-eye-fill"></i>
+    <div id="view-shower-vigenere"><p class="text-black ms-3">63</p></div>
+	  
+	  </div>
+	</div>
+    </div>
+    </a>
+  </div>
+
+  <div class="col mt-3">
     <a href="tool/vigenere">
     <div class="card h-100">
-      <img src="https://plainbackground.com/plain1024/a4a6a3.png" class="card-img-top" style="max-height: 45%;" alt="...">
-      <div class="card-body user-select-none">
+      <img src="https://plainbackground.com/plain1024/a4a6a3.png" class="card-img-top img-inner ratio-16x9 w-100" alt="...">
+      <div class="card-body user-select-none mb-5">
         <h5 class="card-title">Vigenere Cipher</h5>
         <p class="card-text">Polyalphabetic encryption and decryption based on the Vigenere Cipher.</p>
-	  <div class="d-flex  text-right">
+        <div style="margin-top: 2vh;"></div>
+	  <div class="d-flex  text-right position-absolute bottom-0 start-0 ms-4 mt-5">
         <i class="bi bi-eye-fill"></i>
     <div id="view-shower-vigenere"><p class="text-black ms-3">13</p></div>
 	  
