--- a/views/pages/webart.ejs
+++ b/views/pages/webart.ejs
@@ -13,7 +13,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   
-  <link href="/styles/main.css" rel="stylesheet">
+  <link href="/styles/tools.css" rel="stylesheet">
+  <link href="/styles/navbar.css" rel="stylesheet">
 </head>
 
 <body>
@@ -31,16 +32,16 @@
 			
 			
 
-<div class="row row-cols-12 row-cols-md-4 g-2">
+<div class="row row-cols-sm-10 row-cols-md-3 g-5">
   
-  <div class="col">
+  <div class="col mt-3">
     <a href="city-of-the-future">
     <div class="card h-100">
-      <img src="imgs/cof.jpg" class="card-img-top" alt="...">
+      <img src="imgs/cof.jpg" class="card-img-top img-inner ratio-16x9 w-100" alt="...">
       <div class="card-body user-select-none">
         <h5 class="card-title">City of The Future</h5>
         <p class="card-text">A man wakes up some time in the future. What great progress has our world experienced?</p>
-	  <div class="d-flex  text-right">
+	  <div class="d-flex  text-right position-absolute bottom-0 start-0 ms-4 mt-5">
         <i class="bi bi-eye-fill"></i>
     <div id="view-shower"><p class="text-black ms-3">0</p></div>
 	  
@@ -49,8 +50,26 @@
     </div>
     </a>
   </div>
+
+  <div class="col mt-3">
+    <a href="hilberts-gallery">
+    <div class="card h-100">
+      <img id = "rand_img" src="imgs/art1.jpeg" class="card-img-top img-inner ratio-16x9 w-100" alt="...">
+      <div class="card-body user-select-none mb-5">
+        <h5 class="card-title">Hilbert's Gallery</h5>
+        <p class="card-text">Explore the galelry of infinite paintings.</p>
+        <div style="margin-top: 2vh;"></div>
+        <div class="d-flex  text-right position-absolute bottom-0 start-0 ms-4 mt-5">
+        <i class="bi bi-eye-fill"></i>
+    <div id="view-shower-hilbert"><p class="text-black ms-3">11</p></div>
+	  
+	  </div>
+	</div>
+    </div>
+    </a>
+  </div>
    
-  
+
 
 
 		</div>
